--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
             <version>4.0.3.RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path-assert</artifactId>
+            <version>0.8.1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
     <properties >
